--- a/cloud-front/src/App.css
+++ b/cloud-front/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+#root {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 130px;
+  padding-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.form-group {
+  padding: 0 10px 0 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fields {
+  padding-bottom: 10px;
+}
+
+.alert {
+  padding: 10px !important;
+  margin: 5px;
 }
